--- a/package.json
+++ b/package.json
@@ -41,8 +41,11 @@
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.3.1",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   },
   "description": "An Ionic project"
 }
